PRO 6811 : Viet api cho exam va exam by id
