# TracNghiem/app/Http/Controllers/UserController.php
@@ -10,12 +10,5 @@ use Illuminate\Http\JsonResponse;
 class UserController extends Controller
 {
 
-    public function getAllUser(Request $request) : JsonResponse
-    {
-        $user = User::all();
-        return response()->json([
-            'status_code' => 200,
-            'data' => $user,
-        ]);
-    }
+    
 }
