# TracNghiem/public/swagger.yaml
@@ -38,9 +38,6 @@ paths:
       responses:
         404:
           description: Some error occur whlie register
-          
-          
-  
   /login:
     post:
       tags:
@@ -87,10 +84,52 @@ paths:
       parameters: []
       responses:
         default:
-          description: successful operation
+          description: successful operation 
       security:
         - bearerAuth: []
-  
+  /exam:
+    get:
+      tags:
+      - exam
+      summary: Take all exam in list exams
+      operationId: takeExam
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      responses:
+        default: 
+          description: successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Exam'
+        404:
+          description: Some error occur whlie register
+  /exam/{id}:
+    get:
+      tags:
+      - exam
+      summary: Take exam with id
+      operationId: takeExam
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        description: The id of exam
+        required: true
+        type: string
+      responses:
+        default: 
+          description: successful operation
+          schema:
+            type: object
+        404:
+          description: Some error occur whlie register
 securityDefinitions:
   petstore_auth:
     type: oauth2
@@ -129,16 +168,27 @@ definitions:
         type: string
     xml:
       name: User
+  Exam:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int32
+      name:
+        type: string
+      description:
+        type: string    
   ApiResponse:
     type: object
     properties:
-      code:
+      status_code:
         type: integer
         format: int32
-      type:
-        type: string
       message:
         type: string
+      error:
+        type: string      
+  
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
