# TracNghiem/routes/api.php
@@ -26,10 +26,13 @@ use App\Http\Controllers\Auth\AuthController;
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/logout', [AuthController::class, 'logout'])->name('logout.api');
-    Route::get('/user', [UserController::class, 'userdata'])->name('user.api');
-    
+    Route::prefix('exam')->group(function (){
+        Route::get('/', [ExamController::class, 'list'])->name('exam.list.api');
+        Route::get('/{exam}', [ExamController::class, 'find'])->name('exam.find.api');
+        Route::post('/submit', [ExamController::class, 'submitExam'])->name('exam.submit.api');
+    });
+   
 });
+
 Route::post('/register', [AuthController::class, 'register'])->name('register.api');
 Route::post('/login', [AuthController::class, 'login'])->name('login.api');
-Route::get('/exam', [ExamController::class, 'list'])->name('exam.list.api');
-Route::post('/exam', [ExamController::class, 'find'])->name('exam.find.api');
